# rgtkshell

./: Cargo.toml  README.md  build.rs  flake.nix
.cargo/: config.toml
src/: config.rs  events.rs  main.rs
src/backends/: hyprland.rs
src/styles/: bar.scss  main.scss  output.css
src/widgets/: mod.rs
src/widgets/battery/: mod.rs
src/widgets/clock/: mod.rs
src/widgets/workspace_btn/: imp.rs  mod.rs
src/widgets/workspaces/: imp.rs  mod.rs
src/windows/bar/: mod.rs
